feat: Adiciona a tela de balanço físico-financeiro